# CMPE_220_2025

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  assembler  cmake_install.cmake  emulator
alu/: alu.cpp  alu.h
assembler/: assembler.cpp  assembler.h  main.cpp
control/: control.cpp  control.h
cpu/: common.h  cpu.cpp  cpu.h  registers.cpp  registers.h
docs/: ISA.md  recursion_and_stack.md
emulator/: main.cpp
memory/: memory.cpp  memory.h
programs/: factorial.asm  factorial.c  fib.asm  hello.asm
